force-app/main/default/objects/Events_Managers__c/Events_Managers__c.object-meta.xml
<CustomObject>
    <label>Events Managers</label>
    <nameField>
        <label>Events Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>