force-app/main/default/objects/Events_Managers__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Employee ID</label>
    <type>AutoNumber</type>
</CustomField>