force-app/main/default/objects/Events_Managers__c/fields/Event_Types_Managed__c.field-meta.xml
<CustomField>
    <fullName>Event_Types_Managed__c</fullName>
    <label>Event Types Managed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>In-person</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>