force-app/main/default/objects/Events_Managers__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Manager</fullName>
            </value>
            <value>
                <fullName>Logistics &amp; Operations Manager</fullName>
            </value>
            <value>
                <fullName>Venue &amp; Hospitality Manager</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Communications Manager</fullName>
            </value>
            <value>
                <fullName>Budget &amp; Finance Manager</fullName>
            </value>
            <value>
                <fullName>Technical &amp; Production Manager</fullName>
            </value>
            <value>
                <fullName>Vendor &amp; Supplier Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>