force-app/main/default/objects/Events_Managers__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Vendor Coordination</fullName>
            </value>
            <value>
                <fullName>Budget Management</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Event Design &amp; Planning</fullName>
            </value>
            <value>
                <fullName>Risk Management</fullName>
            </value>
            <value>
                <fullName>Team Leadership</fullName>
            </value>
            <value>
                <fullName>Communication Skills</fullName>
            </value>
            <value>
                <fullName>Problem-Solving</fullName>
            </value>
            <value>
                <fullName>Time Management</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Promotions</fullName>
            </value>
            <value>
                <fullName>Technical Setup &amp; AV Management</fullName>
            </value>
            <value>
                <fullName>Logistics Coordination</fullName>
            </value>
            <value>
                <fullName>Client Relations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>