force-app/main/default/objects/Events_Managers__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Events</fullName>
            </value>
            <value>
                <fullName>Social Events</fullName>
            </value>
            <value>
                <fullName>Entertainment Events</fullName>
            </value>
            <value>
                <fullName>Cultural Events</fullName>
            </value>
            <value>
                <fullName>Sports Events</fullName>
            </value>
            <value>
                <fullName>Trade Shows &amp; Exhibitions</fullName>
            </value>
            <value>
                <fullName>Conferences &amp; Seminars</fullName>
            </value>
            <value>
                <fullName>Wedding Planning</fullName>
            </value>
            <value>
                <fullName>Product Launches</fullName>
            </value>
            <value>
                <fullName>Charity &amp; Fundraising Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>