force-app/main/default/objects/Events_Managers__c/fields/Upcoming_Events_Count__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Events_Count__c</fullName>
    <label>Upcoming Events Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>