force-app/main/default/objects/Events_Managers__c/validationRules/Validation_Rule_for_phone_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_for_phone_number</fullName>
    <active>true</active>
    <description>Contact phone number must pass a 10-digit validation. If the user attempts to enter a phone number with 11 digits or 9 digits, an error message will be displayed on the field stating: &quot;Please enter a valid 10-digit mobile number.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(), 
        ISCHANGED(Phone_Number__c)
    ),
    NOT(REGEX(Phone_Number__c, &quot;\\+91\\s\\d{10}&quot;)),
    ISBLANK(Phone_Number__c) = FALSE
)</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>&quot;add +91&quot;add space&quot; &quot;enter a valid 10-digit mobile number.&quot;</errorMessage>
</ValidationRule>